# lab-4-vlados239

./: CMakeLists.txt
src/resource_core/: CMakeLists.txt
src/resource_core/include/resource_core/: file_handle.hpp  file_io.hpp  resource_core.hpp  resource_error.hpp  resource_manager.hpp
src/resource_core/src/: file_handle.cpp  file_io.cpp  resource_core.cpp  resource_error.cpp  resource_manager.cpp
tests/: tests.cpp
